now able to run getty csi script