@@ -3,6 +3,7 @@ package edu.ucsd.getty;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 
@@ -11,9 +12,11 @@ public class GettyRunner {
 
     private String gettyPath;
     private String pythonPath;
+    private String projectBasePath;
 
-    public GettyRunner(String gettyPath, String pythonPath) {
+    public GettyRunner(String projectBasePath, String gettyPath, String pythonPath) {
         log.warn("getty runner gettyPath {}, pythonPath {}", gettyPath, pythonPath);
+        this.projectBasePath = projectBasePath;
         this.gettyPath = gettyPath;
         this.pythonPath = pythonPath;
     }
@@ -23,25 +26,44 @@ public class GettyRunner {
             throw new IllegalStateException("Wrong python version");
         }
 
-        String cmd = String.format("%s %s %s %s %s", pythonPath, gettyPath, commitHashPre, commitHashPost, priorityFilePath);
-        Process p = Runtime.getRuntime().exec(cmd);
+
+        ProcessBuilder builder = new ProcessBuilder();
+//        builder.command(pythonPath, gettyPath, "-h");
+        builder.command(pythonPath, gettyPath, commitHashPre, commitHashPost, priorityFilePath);
+        builder.directory(new File(projectBasePath).getAbsoluteFile());
+        builder.redirectErrorStream(true);
+        Process p = builder.start();
+
+        BufferedReader stdError = new BufferedReader(new
+                InputStreamReader(p.getInputStream()));
+
         waitForProcessToComplete(p);
 
         if (p.exitValue() != 0) {
-            logProcessErrorOutput(p, cmd);
+            String cmd = String.format("%s %s %s %s %s", pythonPath, gettyPath, commitHashPre, commitHashPost, priorityFilePath);
+            logProcessErrorOutput(p, cmd, stdError);
             throw new IllegalStateException("The csi script exited with value " + p.exitValue());
         }
     }
 
     private boolean isCorrectPythonVersion() throws IOException {
-        String cmd = String.format("%s --version", pythonPath);
-        Process p = Runtime.getRuntime().exec(cmd);
+        ProcessBuilder builder = new ProcessBuilder();
+        builder.command(pythonPath, "--version");
+        builder.directory(new File(projectBasePath).getAbsoluteFile());
+        builder.redirectErrorStream(true);
+        Process p = builder.start();
+
         BufferedReader stdError = new BufferedReader(new
-                InputStreamReader(p.getErrorStream()));
+                InputStreamReader(p.getInputStream()));
+
+//        String cmd = String.format("%s --version", pythonPath);
+//        Process p = Runtime.getRuntime().exec(cmd);
+//        BufferedReader stdError = new BufferedReader(new
+//                InputStreamReader(p.getErrorStream()));
         waitForProcessToComplete(p);
 
         if (p.exitValue() != 0) {
-            logProcessErrorOutput(p, cmd);
+            logProcessErrorOutput(p, pythonPath + " --version", stdError);
             return false;
         }
 
@@ -73,10 +95,7 @@ public class GettyRunner {
         }
     }
 
-    private void logProcessErrorOutput(Process p, String cmd) throws IOException {
-        BufferedReader stdError = new BufferedReader(new
-                InputStreamReader(p.getErrorStream()));
-
+    private void logProcessErrorOutput(Process p, String cmd, BufferedReader stdError) throws IOException {
         log.error("Error running {}", cmd);
         String s = null;
         while ((s = stdError.readLine()) != null) {
